# LongshipLink

./: README.md
auth/: .goreleaser.yaml  Makefile  go.mod  go.sum  main.go  sonar-project.properties
auth/api/: api.go  auth.go  server.go  tracer.go
auth/database/: client.go  error.go  server.go  tracer.go
auth/database/migrations/: 20240415211401_new.go  migration.go.tmpl
auth/database/migrations/20240415211401_new/: player.go  server.go
auth/deployments/: docker-compose-test.yaml
auth/httpclient/: httpclient.go
auth/logic/: authorize.go  logic.go  minecraft.go  pubnub.go  server.go  token.go  tracer.go
auth/models/: kind.go  player.go  server.go
auth/util/: randstring.go
cloudflare-auth/: .gitignore  Cargo.toml  README.md  package-lock.json  wrangler.toml.example
cloudflare-auth/src/: lib.rs
mod/: .gitignore  LICENSE  build.gradle  gradle.properties
mod/run/instance1/: eula.txt  options.txt  server.properties
mod/run/instance2/: options.txt  server.properties
mod/src/main/java/codes/tyr/longshiplink/: LongshipLink.java  LongshipLinkClient.java
mod/src/main/java/codes/tyr/longshiplink/auth/: AuthClient.java  UserAuthResponse.java
mod/src/main/java/codes/tyr/longshiplink/client/: LongshipLinkClient.java
mod/src/main/java/codes/tyr/longshiplink/cmd/: LLConfigCommand.java  LLLLCommand.java  LLOnlineCommand.java  LLTell.java
mod/src/main/java/codes/tyr/longshiplink/config/: LLClientConfigProvider.java  LLClientConfigs.java  LLServerConfigProvider.java  (+2 more)
mod/src/main/resources/: fabric.mod.json  longship-link.mixins.json
(+11 files in other folders)
