[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.2.0"
url = "2.5.0"
serde_json = "1.0.116"
worker-kv = "0.7"
wasm-bindgen = "0.2.86"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[dependencies.web-sys]
version = "0.3"
features = [
    'Request',
    'Response',
    'ResponseInit',
    'Url',
    'UrlSearchParams',
]

[dev-dependencies]
fs_extra = "1.2.0"
psutil = { git = "https://github.com/mygnu/rust-psutil", branch = "update-dependencies" }
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.5.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "test-util",
    "time",
] }
